--- a/15-usefulness.Rmd
+++ b/15-usefulness.Rmd
@@ -6,12 +6,15 @@ knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, messa
 
 # Uses of `R`
 
-## Data Cleaning
+## What We've Done So Far
 
 Now's a good time to change gears for a little. While we've done a lot already, it may seem like `R` is just good at helping with homework, speeding up calculations involving data. But it's easy to make use of `R` when you're instructed on how to do it and see specific use cases.
 
+## Where We're Going
+
 At its core, `R` is great at computing statistics and making plots. After all, it was built by statisticians, for statisticians. But like any language, `R` has grown to be great for so much more than what you've seen. It has the power to manipulate entire datasets, create documents (like this entire book, your homework assignments, etc.), and even build websites and applications. We'll cover how to do some of this in this section of the book.
 
+## Data Cleaning
 
 If you want to think of yourself as an `R` doctor, all of the patients (datasets) you've seen so far have come in healthy. You've learned how to find the information needed for their charts, and you should be very comfortable with how a healthy check-up should go. But what do you do when a patient comes in sick? They've got something wrong with them, and it's your job to figure out what it is and how to fix it. This diagnosing process, as well as what we do to cure the patient, is known as <span class = 'vocab'>data cleaning</span>.
 
