--- a/11-percentiles-and-boxplots.Rmd
+++ b/11-percentiles-and-boxplots.Rmd
@@ -6,7 +6,7 @@ knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, messa
 
 ## Percentiles
 
-Normal curves, averages, standard deviations, and Z-scores may seem like they provide all the in information needed to understand a simple set of data. But what about when it doesn't? Take for example a standardized test. We may not necessarily care what percentage a particular student got on the exam, but we're more likely concerned with comparing that student with the rest of their peers. Are they ahead? Are they behind? Luckily, we can make use of <span class = 'vocab'>**percentiles**</span> to help answer these types of questions.
+Normal curves, averages, standard deviations, and Z-scores may seem like they provide all the information needed to understand a simple set of data. But what about when it doesn't? Take for example a standardized test. We may not necessarily care what percentage a particular student got on the exam, but we're more likely concerned with comparing that student with the rest of their peers. Are they ahead? Are they behind? Luckily, we can make use of <span class = 'vocab'>**percentiles**</span> to help answer these types of questions.
 
 What is a percentile? It's the area to the left of a given Z-score, or the percentage of data *less* than the one you're examining. In other words, being in the $n$^th^ percentile means having a Z-score such that $n$% of the area is to our left. In our standardized test example, it's the percentage of people you scored better than. To calculate a percentile by hand, we'd first find the Z-score, then get the corresponding middle areas from our [chart](img/10-z-chart.png), compute the tails, and add the area to the left of our calculated Z-score.
 
@@ -80,7 +80,7 @@ text(x = 1.35,
      col = '#ead031')
 ```
 
-We could also draw the same plot horizontally. It's good to be able to analyze a box plot in both ways
+We could also draw the same plot horizontally. It's good to be able to analyze a box plot in both ways.
 
 ```{r 11-horiz-box-plot-example, echo = FALSE}
 boxplot(survey2$socialMedia, ylab = '', xlab = 'Hours Spent on Social Media', horizontal = TRUE)
