--- a/index.Rmd
+++ b/index.Rmd
@@ -12,20 +12,54 @@ link-citations: yes
 highlight: haddock
 github-repo: rstudio/bookdown-demo
 ---
-# Preface {-}
+# Overview and Syllabus {-}
 
 ```{r index-setup, echo = FALSE}
 knitr::opts_chunk$set(fig.align = "center", comment = '', warning = FALSE, message = FALSE, fig.height = 7, fig.width = 12, cache = TRUE)
 library(magrittr)
 ```
 
-Welcome to the STAT 100 Honors Project! Make sure that you've gotten your HCLA approved and submitted to your college.
+**Coordinator**: Ross Drucker
+**Email**: ross.a.drucker@gmail.com
 
-## Overview {-}
+**Office Hours**: MWF from 2:00pm-5:00pm, TR from 3:30pm-5:00pm in 23 Illini Hall (CITES Computer Lab), or by appointment
+
+**Website(s)**: General information about the project will be posted on [Compass2g](https://compass2g.illinois.edu/webapps/login/). Assignments will be posted on [Lon-Capa](lon-capa.illinois.edu) under the James Scholar folder. The textbook can be found at https://rossdrucker.github.io/STAT-100-Honors-Project/
+
+**Project Objective**: The goal of this project is to make students comfortable using the R programming language for a variety of uses. By the end, students should be able to perform basic calculations in R for both STAT 100 concepts and personal use.
+
+**HCLA**: In order to receive credit for this project, you must get an HCLA (either paper form or electronic) signed no later than **Monday, January 29th at 11:59pm**. Since the project is meant to run alongside class material, signups after this date will not be accepted.
+
+**Topics** (not in order; these may be updated throughout the semester):
+
+1)	R's interface and using R as a calculator
+2)	Data types
+3)	Descriptive statistics
+4)	Regression and model creation
+5)	Plotting, histograms, and visualization
+6)	Functions and control structures
+7)	Document rendering and scripting
+8)	Coding Style
+9)	Hypothesis testing
+10)	Probability
+
+**Grading Policy**: 
+-	Since this is the first semester for this version of the honors project, there's not a set number of assignments. There will most likely be around 8-12 assignments (due every 1 to 1.5 weeks)
+-	Each week, students should expect to spend 2-3 hours on readings and assignments
+-	All assignments will be posted on (and therefore submitted to) Lon-Capa. 
+-	Point values will vary by assignment
+-	In order to receive credit for the project, you must complete all assignments with an average an 85% or higher
+-	Assignments will be available for one week after posting. No late assignments will be accepted
+
+**Academic Integrity**: All students are expected to abide by the campus regulations on academic integrity, which can be found [here](http://studentcode.illinois.edu/article1_part4_1-401.html). These standards will be enforced and infractions of these rules will not be tolerated in this course. Such behavior includes sharing or copying any part of another student's assignment or allowing another student to copy any part of your assignment.
+
+**Changes**: The coordinator reserves the right to change any of the information in this syllabus. It is the student's responsibility to refer back to the syllabus to see pending changes.
+
+## About This Book {-}
 
 This book is meant to run parallel to the [STAT 100](http://courses.las.illinois.edu/stat/stat100/) course notes. The hope is that STAT 100 students learn how the concepts they learned are put to use in modern statistical settings. Throughout, students will not only gain familiarity with the concepts in the notebook, but will also gain an understanding on how to use the `R` programming language to solve every-day problems in the real world.
 
-## Conventions {-}
+## Conventions For This Book {-}
 
 A few things to note throughout this book:
 
@@ -43,6 +77,6 @@ sqrt(4)
 
 - Vocab words will appear like <span class = 'vocab'>this</span> throughout the text
 
-- <span class = 'tip'>*Helpful hints ("Pro tips") will appear in this color and be in italics. They are usually shortcuts to use in*</span> <span style = 'color: #00ce45'>`R`</span> <span class = 'tip'>*to help make code writing and editing easier to do*</span>
+- <span class = 'tip'>Helpful hints ("Pro tips") will appear in this color and be in italics. They are usually shortcuts to use in</span> <span style = 'color: #00ce45'>`R`</span> <span class = 'tip'>to help make code writing and editing easier to do</span>
 
-- <span class = 'note'>*Things to keep in mind or pay attention to will look like this. They'll usually begin "Note:"*</span>
+- <span class = 'note'>Things to keep in mind or pay attention to will look like this. They'll usually begin "Note:"</span>
